--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "react-scripts": "4.0.3",
     "typescript": "~4.1.5"
   },
+  "resolutions": {
+    "babel-loader": "8.1.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
