--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
     "redux-devtools-extension": "^2.13.9",
     "tachyons": "^4.12.0",
     "typescript": "~4.1.5"
